2008-09-19  Sebastien Pouliot  <sebastien@ximian.com>

	* OpCodeBitmask.cs: Add IsSubsetOf method.

2008-09-18  Néstor Salceda  <nestor.salceda@gmail.com>

	* MethodSignatures.cs: Added a new method signature for the delegate
	Invoke method.

2008-08-28  Sebastien Pouliot  <sebastien@ximian.com>

	* OpCodeBitmask.cs: New. Specialized class to handle a bitmask on
	Cecil's Code enum (which is too large for Bitmask<T>).

2008-07-16  Sebastien Pouliot  <sebastien@ximian.com>

	* StackEntryAnalysis.cs: Fix case where the LeaveStack is empty,
	i.e. null, when Pop is called.

2008-07-07  Sebastien Pouliot  <sebastien@ximian.com>

	* MethodSignature.cs: Change Match method to behave more like 
	Equals, i.e. return false for null, not an exception.

2008-06-23  Sebastien Pouliot  <sebastien@ximian.com>

	* StackEntryAnalysis.cs: Move out GetPopCount and GetPushCount 
	(into InstructionRocks). Simplify some switch/case to generate
	less code.

2008-06-08  Sebastien Pouliot  <sebastien@ximian.com>

	* StackEntryAnalysis.cs: Move out nested UsageResult type. Also
	return a list, not an array, from FindLoad. [self-test]
	* StackEntryUsageResult.cs: New. Un-nested, renamed, UsageResult

2008-04-13  Sebastien Pouliot  <sebastien@ximian.com>

	* StackEntryAnalysis.cs: Prevent possible NRE in 
	InstructionWithLeave.Equals. 

2008-04-06  Sebastien Pouliot  <sebastien@ximian.com>

	* StackEntryAnalysis.cs: Add Equals,	GetHashCode and ==, != 
	operators on InstructionWithLeave and UsageResult to satisfy 
	OverrideValueTypeDefaultsRule. Add Equals(StoreSlot) method to 
	satisfy ImplementEqualsTypeRule.

2008-02-16  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* MethodSignature.cs: Fix the cref reference.  Now points to
	Gendarme.Framework.Helpers.MethodSignatures.
	* StackEntryAnalysis.cs: Fix the parameters name for the correct
	generation of documentation.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com> 

	* MethodSignature.cs
	* MethodSignatures.cs
	* StackEntryAnalysis.cs: